syntax = "proto3";

package NAlice.NHollywood;

// TODO(a-square): remove this after we moved into the production AppHost
message TBassRequestRTLogToken {
    string RTLogToken = 1;
}
