syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/megamind/protos/scenarios/features";
option java_package = "ru.yandex.alice.megamind.protos.scenarios.features";
option java_outer_classname = "SearchProto";

import "alice/library/response_similarity/proto/similarity.proto";

message TSearchFeatures {
    // Selected factoid.
    bool FoundCalculatorFact = 1;
    bool FoundSuggestFact = 2;
    bool FoundEntityFact = 3;
    bool FoundCaloriesFact = 4;
    bool FoundConverterFact = 5;
    bool FoundTimeDifferenceFact = 6;
    bool FoundDistanceFact = 7;
    bool FoundZipCodeFact = 8;
    bool FoundSportLiveScoreFact = 9;
    bool FoundObjectAsFact = 10;

    bool FactFromWizplaces = 11;
    bool FactFromRightDocs = 12;
    bool FactFromDocs = 13;
    bool ResponseWithSerp = 14;
    double FactoidPosition = 15;

    bool FoundTimeFact = 16;
    bool FoundSuggestFactDate = 17;

    NAlice.NResponseSimilarity.TSimilarity DirectOfferSimilarity = 18;
    NAlice.NResponseSimilarity.TSimilarity DirectTitleSimilarity = 19;
    NAlice.NResponseSimilarity.TSimilarity DirectInfoSimilarity = 20;
}
