syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/search";
option java_package = "ru.yandex.alice.protos.data.scenario.search";

import "mapreduce/yt/interface/protos/extension.proto";

message TSearchFactData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TSerpData {
        string Question = 1 [json_name = "question"];
        string Title = 2 [json_name = "title"];
        string RequestedFact = 3 [json_name = "requested_fact"];
    }

    string SnippetType = 1 [json_name = "snippet_type", (NYT.column_name) = "snippet_type"];
    string Text = 2 [json_name = "text", (NYT.column_name) = "text"];
    string Question = 3 [json_name = "question", (NYT.column_name) = "question"];
    string Image = 4 [json_name = "image", (NYT.column_name) = "image"];
    string SearchUrl = 5 [json_name = "search_url", (NYT.column_name) = "search_url"];
    string Url = 6 [json_name = "url", (NYT.column_name) = "url"];
    string Hostname = 7 [json_name = "hostname", (NYT.column_name) = "hostname"];
    string Title = 8 [json_name = "title", (NYT.column_name) = "title"];
    TSerpData SerpData = 9 [json_name = "serp_data", (NYT.column_name) = "serp_data"];
}
